# donut

./: Readme.md  idea.md  package-lock.json  package.json  setup-database.js  todos.md
backend/: .gitignore  Cargo.toml
backend/.sqlx/: query-0e5356e0df7a35f0ec8612d5ae4710768caaf81217d87cfdaa3b60408bfe303a.json  query-208dfa4e2389042008f4266e2cdc85ad141396fc952a8e65adc9e1f71923ecf4.json  query-3dbed7e9623d760c182831d21017ddba448cbd921033a20e73e69886ef00f16d.json  query-596dc3ca36dc338548a31d5c99ececf8a6f33b562644adcbaeeebff05ebc026c.json  query-664b514148609d47331f77209c6a5893bd18509a08deb4bdd60248d60603602c.json  query-6ead4aaa84550c867be5b865f07479830a103e94fdaa34fb2430aa44943b3f6a.json  query-75e063e31b9d76e0e0cd551897514c8047b1b58008bf4470dbf5be01a1a9b241.json  query-8ebf677d66f54f5bcdec914f28e616ed53853490e5a3e7070d2eb2539ccbcf83.json  query-99ce0977f30f0b0ae767e5b86bddb534e5b6931d118fbcb8b5567185083e62c9.json  query-bf7883601698cb7c2346c6aadd8498bb6005a936c073b0c6668f72da19b56358.json  query-c143484fd962a7b7d091af2c7c16a8f025180fc2f59381d45032ce4a1635a7da.json  query-e2349a17e0285a8ac78adac8baae3c20cb7f56bd96fd2a7d6cca52fd471bb31c.json
backend/migrations/: 0001.sql  20250101000000_create_users_table.sql  20260212103352_project_table.sql  20260328120643_add_refresh_token.sql  20260329155906_alter_refresh_token.sql  20260329170936_add_revoked_at.sql  20260404132423_add_session_table.sql  20260404133340_add_app_user_table.sql  20260417180033_add_workflow_table.sql
backend/src/: main.rs
backend/src/api/: middleware_fn.rs  mod.rs
backend/src/api/handlers/: auth.rs  project.rs
backend/src/api/middleware/: middleware.rs  (+1 more)
backend/src/common/: config.rs  errors.rs  mod.rs
backend/src/core/: auth.rs  auth_helper.rs  config.rs  errors.rs  mod.rs  models.rs  states.rs
backend/src/db/: db_config.rs  mod.rs  projects.rs  users.rs
backend/src/platform/: mod.rs
backend/src/storage/: mod.rs  models.rs
(+224 files in other folders)
