[package]
name = "donut_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["cookie"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
hex = "0.4.3"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "macros", "postgres"] }
thiserror = "2.0.18"
time = {version="0.3.46", features = ["formatting", "macros"]}
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
uuid = { version = "1.20.0", features = ["serde"] }
